# SkyFood-V2

./: Dockerfile  README.md  build_docker.sh  docker-compose.yml  docker_entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_description/share/ament_index/resource_index/parent_prefix_path/: robot_description
install/robot_description/share/robot_description/: local_setup.sh  package.sh
install/robot_description/share/robot_description/launch/: gazebo.launch.py  robot_description.launch.py
install/robot_description/share/robot_description/rviz/: robot_vis.rviz
install/robot_description/share/robot_description/urdf/: caster_ball.xacro  robot_base.gazebo  robot_base.xacro  wheels.xacro  xacro_variables.xacro
log/: latest_build
skyfood_ws/install/: local_setup.sh  setup.sh
skyfood_ws/install/rm_behaviors/share/rm_behaviors/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
skyfood_ws/install/rm_behaviors/share/rm_behaviors/launch/: behaviors.launch.py
skyfood_ws/install/rm_bringup/share/rm_bringup/: local_setup.sh  package.ps1  package.sh  package.xml
skyfood_ws/install/rm_bringup/share/rm_bringup/launch/: bringup.launch.py
skyfood_ws/install/rm_interfaces/share/rm_interfaces/: local_setup.sh  package.ps1  package.sh  package.xml
skyfood_ws/install/rm_interfaces/share/rm_interfaces/action/: NavigateToPOI.action  NavigateToPOI.idl
skyfood_ws/install/rm_interfaces/share/rm_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rm_interfaces__rosidl_generator_cExport.cmake  export_rm_interfaces__rosidl_generator_cppExport.cmake  export_rm_interfaces__rosidl_generator_pyExport.cmake  export_rm_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_rm_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rm_interfacesConfig.cmake  rm_interfaces__rosidl_typesupport_cExport.cmake  rm_interfaces__rosidl_typesupport_cppExport.cmake  rm_interfaces__rosidl_typesupport_introspection_cExport.cmake  rm_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
skyfood_ws/install/rm_interfaces/share/rm_interfaces/msg/: CompartmentStatus.idl  CompartmentStatus.msg
skyfood_ws/install/rm_interfaces/share/rm_interfaces/rust/: Cargo.toml
skyfood_ws/install/rm_interfaces/share/rm_interfaces/srv/: ControlCompartment.idl  ControlCompartment_Request.msg  DeletePOI.idl  DeletePOI_Request.msg  ListPOIs.idl  (+12 more)
skyfood_ws/install/rm_localization/share/rm_localization/: package.dsv  package.ps1  package.sh  package.xml
skyfood_ws/install/rm_mission_bt/include/rm_mission_bt/: navigate_to_poi_node.hpp  play_sound_node.hpp
skyfood_ws/install/rm_mission_bt/share/rm_mission_bt/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
skyfood_ws/install/rm_navigation/share/rm_navigation/: package.dsv  package.ps1  package.sh  package.xml
skyfood_ws/install/rm_navigator/share/rm_navigator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
skyfood_ws/install/rm_slam/share/rm_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
skyfood_ws/install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
skyfood_ws/install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
skyfood_ws/install/sipeed_tof/share/sipeed_tof/: package.ps1  package.sh
skyfood_ws/log/: latest_build
skyfood_ws/rm_localization/: setup.cfg  setup.py
skyfood_ws/rm_localization/launch/: amcl.launch.py
skyfood_ws/src/rm_behaviors/: setup.cfg  setup.py
skyfood_ws/src/rm_behaviors/launch/: behaviors.launch.py
skyfood_ws/src/rm_behaviors/resource/: rm_behaviors
skyfood_ws/src/rm_behaviors/rm_behaviors/: __init__.py  compartment_manager.py  map_manager.py  poi_manager.py  sound_player.py
skyfood_ws/src/rm_bringup/: CMakeLists.txt
skyfood_ws/src/rm_interfaces/: CMakeLists.txt
skyfood_ws/src/rm_interfaces/srv/: ControlCompartment.srv  DeletePOI.srv  ListPOIs.srv  LoadMap.srv  SaveMap.srv
skyfood_ws/src/rm_localization/: setup.py
skyfood_ws/src/rm_localization/config/: amcl_params.yaml
skyfood_ws/src/rm_localization/launch/: ekf.launch.py
skyfood_ws/src/rm_mission_bt/: CMakeLists.txt  README.md  SFV2-BTproj.btproj  package.xml  setup.cfg  setup.py
skyfood_ws/src/rm_mission_bt/bt_xml/: delivery_mission.xml  test_mission.xml
skyfood_ws/src/rm_mission_bt/include/rm_mission_bt/: control_compartment_node.hpp  save_map_node.hpp
skyfood_ws/src/rm_mission_bt/launch/: mission.launch.py
skyfood_ws/src/rm_mission_bt/rm_mission_bt/: __init__.py  mission_runner.py
skyfood_ws/src/rm_mission_bt/rm_mission_bt/behaviors/: __init__.py  navigate_to_poi.py  play_sound.py  save_map.py
skyfood_ws/src/rm_mission_bt/src/: control_compartment_node.cpp  mission_runner.cpp  navigate_to_poi_node.cpp  play_sound_node.cpp  save_map_node.cpp
skyfood_ws/src/rm_navigation/: setup.cfg  setup.py
skyfood_ws/src/rm_navigation/config/: nav2_params.yaml
skyfood_ws/src/rm_navigation/launch/: navigation.launch.py
skyfood_ws/src/rm_navigator/: package.xml  setup.cfg  setup.py
skyfood_ws/src/rm_slam/: package.xml  setup.cfg  setup.py
skyfood_ws/src/rm_slam/launch/: slam.launch.py
skyfood_ws/src/robot_description/: CMakeLists.txt
skyfood_ws/src/robot_description/rviz/: robot_vis.rviz
skyfood_ws/src/robot_description/urdf/: caster_ball.xacro  robot_base.gazebo  robot_base.xacro  sensors.xacro  wheels.xacro
skyfood_ws/src/robot_description/world/: house.world
skyfood_ws/src/rplidar_ros/: CMakeLists.txt
worlds/: README.md
(+218 files in other folders)
