<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_mission_bt</name>
  <version>0.1.0</version>
  <description>
    Mission-level behavior tree for SkyFood using py_trees_ros.
    Orchestrates high-level robot tasks: delivery missions, map saving,
    sound cues, and POI navigation.
  </description>
  <maintainer email="mefkhytheroboticist@gmail.com">mekhy</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rm_interfaces</depend>
  <!-- py_trees_ros installed via pip or apt: python3-py-trees-ros -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
