<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_behaviors</name>
  <version>0.1.0</version>
  <description>
    Atomic robot behavior nodes for SkyFood — map management, POI navigation and sound playback.
    Each node exposes ROS2 services/actions consumed by the mission behavior tree.
  </description>
  <maintainer email="mefkhytheroboticist@gmail.com">mekhy</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rm_interfaces</depend>
  <depend>nav2_simple_commander</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
